# geoproyROC2

./: CMakeLists.txt  foot.cpp  foot.h  genroc.cpp  genroc.h  geoproyectiva.cpp  geoproyectiva.h  main.cpp
Jupyter/: Borrador.ipynb
Jupyter/Respaldo/: CodigoRespaldo.cpp
